--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -355,7 +355,7 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:onClick="intentdiff"
+                                android:id="@+id/islamic_sections"
                                 android:layout_width="0dp"
                                 android:layout_height="65dp"
                                 android:layout_weight="1"
