--- a/app/src/main/res/layout/activity_azcartitle1.xml
+++ b/app/src/main/res/layout/activity_azcartitle1.xml
@@ -6,31 +6,22 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".azkar.Azcartitle1">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_weight="3"
-            android:layout_height="match_parent">
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewpager1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <com.google.android.gms.ads.AdView
-                android:id="@+id/azkartitle1"
-                xmlns:ads="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                ads:adSize="SMART_BANNER"
-                ads:adUnitId="@string/Banner1">
-            </com.google.android.gms.ads.AdView>
-        </LinearLayout>
 
-    </LinearLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager1"
+        android:layout_width="match_parent"
+        android:layout_weight="3"
+        android:layout_height="0dp" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="arrow.json"
+        app:lottie_loop="true"
+        />
+
 </LinearLayout>
