--- a/app/src/main/res/layout/activity_azcartitle6.xml
+++ b/app/src/main/res/layout/activity_azcartitle6.xml
@@ -5,18 +5,23 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".azkar.Azcartitle6">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    tools:context=".azkar.Azcartitle1">
 
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewpager7"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-    </LinearLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager1"
+        android:layout_width="match_parent"
+        android:layout_weight="3"
+        android:layout_height="0dp" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="5dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="arrow.json"
+        app:lottie_loop="true"
+        />
+
 </LinearLayout>
