Update quran messages

--- a/app/src/main/res/layout/activity_quranic_message.xml
+++ b/app/src/main/res/layout/activity_quranic_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B3015585"
-    tools:context=".QuranicMessage">
+    tools:context=".quran.QuranicMessage">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -17,18 +17,6 @@
     </androidx.recyclerview.widget.RecyclerView>
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/qumsgbanner"
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            ads:adSize="SMART_BANNER"
-            ads:adUnitId="@string/Banner1">
-        </com.google.android.gms.ads.AdView>
-    </LinearLayout>
+
 
 </RelativeLayout>
