--- a/app/src/main/res/layout/item_pagerahdes.xml
+++ b/app/src/main/res/layout/item_pagerahdes.xml
@@ -137,5 +137,14 @@
         </ScrollView>
     </androidx.cardview.widget.CardView>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="arrow.json"
+        app:lottie_loop="true"
+        />
+
 
 </LinearLayout>
