--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -44,7 +44,7 @@
         <item
             android:id="@+id/policy"
             android:icon="@drawable/ic_policy"
-            android:title="Privacy Policy" />
+            android:title="سياسية الخصوصية - Privacy Policy" />
 
         <item
             android:id="@+id/moreapp"
