--- a/app/src/main/res/layout/activity_azcartitle1.xml
+++ b/app/src/main/res/layout/activity_azcartitle1.xml
@@ -24,4 +24,11 @@
         app:lottie_loop="true"
         />
 
+    <FrameLayout
+        android:id="@+id/adsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+         />
+
 </LinearLayout>
