--- a/app/src/main/res/layout/activity_notifications_messages.xml
+++ b/app/src/main/res/layout/activity_notifications_messages.xml
@@ -60,7 +60,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#F6F8FA"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
@@ -118,4 +119,11 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/adsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" />
+
 </LinearLayout>
+
