--- a/app/src/main/res/layout/activity_managerdb.xml
+++ b/app/src/main/res/layout/activity_managerdb.xml
@@ -41,17 +41,11 @@
 
         </LinearLayout>
 
-
-
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adViewmag"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/adsContainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            ads:adSize="SMART_BANNER"
-
-            ads:adUnitId="@string/Banner2"></com.google.android.gms.ads.AdView>
+             />
 
         <LinearLayout
             android:id="@+id/songThumbnail"
