--- a/app/src/main/res/layout/activity_azcartitle2.xml
+++ b/app/src/main/res/layout/activity_azcartitle2.xml
@@ -7,28 +7,42 @@
     android:layout_height="match_parent"
     tools:context=".azkar.Azcartitle2">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpager1"
-        android:layout_width="match_parent"
-        android:layout_weight="3"
-        android:layout_height="0dp" />
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:layout_weight="1"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_gravity="center"
-        app:lottie_autoPlay="true"
-        app:lottie_fileName="arrow.json"
-        app:lottie_loop="true"
-        />
+        android:layout_weight="1"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_margin="5dp"
+                android:layout_gravity="center"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="arrow.json"
+                app:lottie_loop="true"/>
+
+
+            <com.appwalied.quran.utils.WrapContentViewPager
+                android:id="@+id/viewpager1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="true" />
+
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
     <FrameLayout
         android:id="@+id/adsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        />
+        android:layout_gravity="bottom"/>
 
 </LinearLayout>
