--- a/app/src/main/res/layout/fragment_last_read.xml
+++ b/app/src/main/res/layout/fragment_last_read.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/toolbar_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/roqia_title"
+                    android:text="العلامات"
                     style="@style/TextAppearance.MyApp.Title.QiblahActivity"
                     android:gravity="end"
                     android:layout_gravity="center"
